Revert "New namespacing"
This reverts commit f3c79b0116233cea9c5274273d6b3748da0caf44.

--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
 	],
 	"autoload": {
 		"psr-4": {
-			"Koala\\Pouch\\": "src/"
+			"Fuzz\\MagicBox\\": "src/"
 		}
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"Koala\\Pouch\\Tests\\": "tests/",
-			"Koala\\Pouch\\Tests\\Seeds\\": "tests/seeds"
+			"Fuzz\\MagicBox\\Tests\\": "tests/",
+			"Fuzz\\MagicBox\\Tests\\Seeds\\": "tests/seeds"
 		}
 	},
 	"scripts": {
