--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"phpunit/phpunit": "^9",
 		"orchestra/testbench": "^6",
 		"fuzz/http-exception": "1.0.*",
-		"mockery/mockery": "^1"
+		"mockery/mockery": "^1",
+		"friendsofphp/php-cs-fixer": "^3.0"
 	},
 	"authors": [
 		{
@@ -42,6 +43,11 @@
 		],
 		"test-repo": [
 			"vendor/bin/phpunit --filter EloquentRepositoryTest"
+		],
+		"style-fix": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist.php",
+		"style-lint": "vendor/bin/php-cs-fixer fix --dry-run -vv --diff --config=.php_cs.dist.php",
+		"phan": [
+			"phan --progress-bar -o phan_analysis.txt"
 		]
 	},
 	"minimum-stability": "stable"
