Fix composer progress value

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           version: 2
           php_version: 8.0
-          progress: true
+          progress: yes
           dev: yes
       - name: Test
         uses: php-actions/phpunit@v3
