--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,38 +17,39 @@ jobs:
           tools: phpunit
       - name: Get composer cache directory
         id: composer-cache
-        run: echo "::set-output name=dir::/tmp/" #$(composer config cache-files-dir)"
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
       - name: Cache composer dependencies
         uses: actions/cache@v2
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          # Use composer.json for key, if composer.lock is not committed.
-          # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-php8-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
       - name: Composer
         run: composer install --dev
       - name: Run Tests
         run: phpunit
-#  testing-74:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#      - name: Cache Composer dependencies
-#        uses: actions/cache@v2
-#        with:
-#          path: /tmp/composer-cache
-#          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
-#      - name: Install Dependencies
-#        uses: php-actions/composer@v6
-#        with:
-#          version: 2
-#          php_version: 7.4
-#          progress: yes
-#          dev: yes
-#      - name: Test
-#        uses: php-actions/phpunit@v3
-#        with:
-#          php_version: 7.4
-#          configuration: phpunit.xml
+  testing-74:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
+          coverage: xdebug
+          extensions: sqlite3, pdo_sqlite
+          tools: phpunit
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-php7-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+      - name: Composer
+        run: composer install --dev
+      - name: Run Tests
+        run: phpunit
