--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
 	"require-dev": {
 		"phpunit/phpunit": "^9",
 		"orchestra/testbench": "^6",
-		"mockery/mockery": "^1",
-		"friendsofphp/php-cs-fixer": "^3.0"
+		"mockery/mockery": "^1"
 	},
 	"authors": [
 		{
