--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.0'
-          tools: composer, php-cs-fixer
+          tools: php-cs-fixer
       - name: Run Lint Check
         run: php-cs-fixer fix --dry-run -vv --diff --config=.php_cs.dist.php
   phan:
