--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
 	"homepage": "https://koala.io/",
 	"require": {
 		"php": "^7.4|^8.0",
-		"illuminate/database": "^8"
+		"illuminate/database": "^8|^9"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9",
-		"orchestra/testbench": "^6",
+		"orchestra/testbench": "^6|^7.13",
 		"mockery/mockery": "^1"
 	},
 	"authors": [
