--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,8 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
       - name: Set testbench dependency
         run: composer require orchestra/testbench "^6"
-#      - name: Composer
-#        run: composer install
+      - name: Composer
+        run: composer install
       - name: Run Tests
         run: composer run test-coverage
   testing-74:
