--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,18 +6,23 @@ on:
       - main
 
 jobs:
-  testing-php8-laravel9:
+  testing-php-laravel-combinations:
     runs-on: ubuntu-latest
+    matrix:
+      laravel-version: ['8', '9']
+      php-version: ['7.4', '8.0', '8.1', '8.2']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: {{ matrix.php-version}}
           coverage: xdebug
           extensions: sqlite3, pdo_sqlite
           tools: composer, phpunit
+#      - name: Set testbench dependency
+#        run: composer require orchestra/testbench "^6"
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -25,59 +30,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-testing-php8-laravel9-${{ hashFiles('**/composer.json') }}
-          restore-keys: ${{ runner.os }}-composer-
-      - name: Composer
-        run: composer install
-      - name: Run Tests
-        run: composer run test-coverage
-  testing-php8-laravel8:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.0'
-          coverage: xdebug
-          extensions: sqlite3, pdo_sqlite
-          tools: composer, phpunit
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-      - name: Cache composer dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-testing-php8-laravel8-${{ hashFiles('**/composer.json') }}
-          restore-keys: ${{ runner.os }}-composer-
-      - name: Set testbench dependency
-        run: composer require orchestra/testbench "^6"
-      - name: Composer
-        run: composer install
-      - name: Run Tests
-        run: composer run test-coverage
-  testing-74:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '7.4'
-          coverage: xdebug
-          extensions: sqlite3, pdo_sqlite
-          tools: composer, phpunit
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-      - name: Cache composer dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-php7-composer-${{ hashFiles('**/composer.json') }}
+          key: ${{ runner.os }}-composer-testing-php${{ matrix.php-version }}-laravel${{ matrix.laravel-version }}-${{ hashFiles('**/composer.json') }}
           restore-keys: ${{ runner.os }}-composer-
       - name: Composer
         run: composer install
