--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
         laravel-version: ['^8', '^9']
         include:
           - laravel-version: '^8'
-            php-version: ['7.4', '8.0', '8.1']
+            php-version: ['^7.4', '^8.0', '^8.1']
           - laravel-version: '^9'
-            php-version: ['8.0', '8.1', '8.2']
+            php-version: ['^8.0', '^8.1', '^8.2']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
