--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   testing-php-laravel-combinations:
+    name: Tests
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
