--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         laravel-version: ['^8', '^9']
         php-version: ['^7.4', '^8.0', '^8.1']
         exclude:
-          - laravel-version: '^8'
+          - laravel-version: '^8.0'
             php-version: '^8.2'
           - laravel-version: '^9'
             php-version: '^7.4'
@@ -25,12 +25,12 @@ jobs:
       - name: Build
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-version }}
+          php-version: "${{ matrix.php-version }}"
           coverage: xdebug
           extensions: sqlite3, pdo_sqlite
           tools: composer, phpunit
       - name: Require Laravel
-        run: composer require ${{ matrix.laravel-version }}
+        run: composer require "${{ matrix.laravel-version }}"
 #      - name: Set testbench dependency
 #        run: composer require orchestra/testbench "^6"
 
