--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,12 @@ jobs:
       fail-fast: false
       matrix:
         laravel-version: ['^8', '^9']
-        php-version: ['^7.4', '^8.0', '^8.1']
+        php-version: ['7.4', '8.0', '8.1']
         exclude:
           - laravel-version: '^8.0'
-            php-version: '^8.2'
+            php-version: '8.2'
           - laravel-version: '^9'
-            php-version: '^7.4'
+            php-version: '7.4'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
