--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,17 @@ jobs:
       fail-fast: false
       matrix:
         laravel-version: ['^8.0', '^9.0']
-        php-version: ['7.4', '8.0', '8.1']
+        php-version: ['7.4', '8.0', '8.1', '8.2']
+        mutation-testing: ['false']
         exclude:
           - laravel-version: '^8.0'
             php-version: '8.2'
           - laravel-version: '^9.0'
             php-version: '7.4'
+        include:
+          - laravel-version: '^9.0',
+            php-version: '8.1',
+            mutation-testing: 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -26,7 +31,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-          coverage: xdebug
+          coverage: pcov
           extensions: sqlite3, pdo_sqlite
           tools: composer, phpunit
 
@@ -44,6 +49,12 @@ jobs:
         run: composer install
       - name: Run Tests
         run: composer run test-coverage
+
+      - name: Mutation Testing
+        if: ${{ matrix.mutation-testing }} == 'true'
+        run: composer run test-mutation
+
+
   linting:
     runs-on: ubuntu-latest
     steps:
