--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 	"require-dev": {
 		"phpunit/phpunit": "^9",
 		"orchestra/testbench": "^6|^7.13",
-		"mockery/mockery": "^1"
+		"mockery/mockery": "^1",
+		"infection/infection": ">=0.26.7|>=0.18 <=0.26.6"
 	},
 	"authors": [
 		{
@@ -34,7 +35,10 @@
 			"vendor/bin/phpunit"
 		],
 		"test-coverage": [
-			"vendor/bin/phpunit --coverage-text"
+			"vendor/bin/phpunit --coverage-text --coverage-clover ./coverage.xml"
+		],
+		"test-mutation": [
+			"vendor/bin/infection --coverage=./coverage.xml"
 		],
 		"test-repo": [
 			"vendor/bin/phpunit --filter EloquentRepositoryTest"
