--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,6 @@ jobs:
           coverage: pcov
           extensions: sqlite3, pdo_sqlite
           tools: composer, phpunit
-
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -49,10 +48,9 @@ jobs:
       - name: Require Laravel
         run: composer require laravel/framework ${{ matrix.laravel-version }}
       - name: Composer
-        run: composer install
+        run: composer install --no-interaction
       - name: Run Tests
         run: composer run test-coverage
-
       - name: Mutation Testing
         if: ${{ matrix.mutation-testing }} == 'true'
         run: composer run test-mutation
