Add another no interaction flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-testing-php${{ matrix.php-version }}-laravel${{ matrix.laravel-version }}-${{ hashFiles('**/composer.json') }}
       - name: Require Laravel
-        run: composer require laravel/framework ${{ matrix.laravel-version }}
+        run: composer require laravel/framework ${{ matrix.laravel-version }} --no-interaction
       - name: Composer
         run: composer install --no-interaction
       - name: Run Tests
