Properly configure allowed plugins

--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,9 @@
 		]
 	},
 	"minimum-stability": "stable",
-	"allow-plugins": {
-		"infection/extension-installer": true
-	}
+	"config": {
+		"allow-plugins": {
+			"infection/extension-installer": true
+		}
+	},
 }
