--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,10 +50,14 @@ jobs:
       - name: Composer
         run: composer install --no-interaction
       - name: Run Tests
-        run: composer run test-coverage
+        run: vendor/bin/phpunit --coverage-text --coverage-clover ./coverage.xml
+
       - name: Mutation Testing
         if: ${{ matrix.mutation-testing }} == 'true'
-        run: composer run test-mutation
+        run: composer config --no-plugins allow-plugins.infection/extension-installer true && composer require --dev infection/infection
+      - name: Mutation Testing
+        if: ${{ matrix.mutation-testing }} == 'true'
+        run: vendor/bin/infection --coverage=./coverage.xml
 
 
   linting:
