--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
 	"require-dev": {
 		"phpunit/phpunit": "^9",
 		"orchestra/testbench": "^6|^7.13",
-		"mockery/mockery": "^1",
-		"infection/infection": ">=0.26.7|>=0.18 <=0.26.6"
+		"mockery/mockery": "^1"
 	},
 	"authors": [
 		{
