--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,16 +51,12 @@ jobs:
         run: composer install --no-interaction
       - name: Run Tests
         run: vendor/bin/phpunit --coverage-text --coverage-clover ./coverage.xml
-      - name: LS
-        run: ls -al
-
       - name: Mutation Testing
         if: ${{ matrix.mutation-testing }} == 'true'
         run: composer config --no-plugins allow-plugins.infection/extension-installer true && composer require --dev infection/infection
       - name: Mutation Testing
         if: ${{ matrix.mutation-testing }} == 'true'
-        run: vendor/bin/infection --coverage=./coverage.xml
-
+        run: vendor/bin/infection --coverage=coverage.xml
 
   linting:
     runs-on: ubuntu-latest
