--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,9 @@ jobs:
         if: ${{ matrix.mutation-testing }} == 'true'
         run: composer config --no-plugins allow-plugins.infection/extension-installer true && composer require --dev infection/infection
       - name: Mutation Testing
-        if: ${{ matrix.mutation-testing }} == 'true'
+        if: matrix.mutation-testing == 'true'
         run: vendor/bin/infection --coverage=.
+
   linting:
     runs-on: ubuntu-latest
     steps:
