--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run: vendor/bin/phpunit --coverage-text
 
   mutation-testing:
-    name: Tests
+    name: Mutation Testing
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
