--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,12 @@ jobs:
         run: vendor/bin/phpunit --coverage-text --coverage-xml=coverage.xml --log-junit=junit.xml
       - name: Install Mutation Testing Package
         run: composer config --no-plugins allow-plugins.infection/extension-installer true && composer require --dev infection/infection
-      - name: Mutation Testing
+      - name: Full Mutation Testing
+        on: push
         run: vendor/bin/infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 >> $GITHUB_STEP_SUMMARY
+      - name: PR Mutation Testing
+        on: pull-request
+        run: vendor/bin/infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 --git-diff-filter=AM >> $GITHUB_STEP_SUMMARY
 
   linting:
     name: Linting
