Run on test pr branch push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 3.2.x-with-mutation-testing
+      - mutation-testing-pr
   pull_request:
     branches:
       - main
