Output logs in one step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,14 +77,17 @@ jobs:
         if: github.event_name == 'push'
         run: |
           vendor/bin/infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 --only-covered --formatter=progress --logger-github
-          cat infection.html >> $GITHUB_STEP_SUMMARY
       - name: PR Mutation Testing
         if: github.event_name == 'pull_request'
         #Run mutation tests on the diff between the PR target branch and the current branch
         run: |
           git fetch --depth=1 origin $GITHUB_BASE_REF
           vendor/bin/infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 --git-diff-base=origin/$GITHUB_BASE_REF --git-diff-filter=AM --only-covered --formatter=progress --logger-github
-          cat infection.html >> $GITHUB_STEP_SUMMARY
+
+      - name: Output Logs
+        run: |
+          cat summary.log >> $GITHUB_STEP_SUMMARY
+          cat perMutator.md >> $GITHUB_STEP_SUMMARY
 
   linting:
     name: Linting
