Ignore MSI score with no mutations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,13 +76,13 @@ jobs:
       - name: Full Mutation Testing
         if: github.event_name == 'push'
         run: |
-          vendor/bin/infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 --only-covered --logger-github
+          vendor/bin/infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 --only-covered --ignore-msi-with-no-mutations --logger-github
       - name: PR Mutation Testing
         if: github.event_name == 'pull_request'
         #Run mutation tests on the diff between the PR target branch and the current branch
         run: |
           git fetch --depth=1 origin $GITHUB_BASE_REF
-          vendor/bin/infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 --git-diff-base=origin/$GITHUB_BASE_REF --git-diff-filter=AM --only-covered --logger-github
+          vendor/bin/infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 --git-diff-base=origin/$GITHUB_BASE_REF --git-diff-filter=AM --only-covered --ignore-msi-with-no-mutations --logger-github
 
       - name: Output Logs
         run: |
