--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
           php-version: "8.2"
           coverage: pcov
           extensions: sqlite3, pdo_sqlite, ast
-          tools: composer, phpunit
+          tools: composer, phpunit, infection
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -72,8 +72,8 @@ jobs:
         run: composer require laravel/framework ^9.0 --no-interaction
       - name: Run Tests
         run: vendor/bin/phpunit --coverage-text --coverage-xml=coverage.xml --log-junit=junit.xml
-      - name: Install Mutation Testing Package
-        run: composer config --no-plugins allow-plugins.infection/extension-installer true && composer require --dev infection/infection
+#      - name: Install Mutation Testing Package
+#        run: composer config --no-plugins allow-plugins.infection/extension-installer true && composer require --dev infection/infection
       - name: Full Mutation Testing
         if: github.event_name == 'push'
         run: |
@@ -99,8 +99,9 @@ jobs:
       - name: Build
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: '8.1'
           tools: php-cs-fixer
+          coverage: none
       - name: Run Lint Check
         run: php-cs-fixer fix --dry-run -vv --diff --config=.php_cs.dist.php
   phan:
@@ -112,8 +113,9 @@ jobs:
       - name: Build
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: '8.1'
           tools: phan
           extensions: ast
+          coverage: none
       - name: Run Static Analysis
         run: phan --progress-bar -o phan_analysis.txt
