--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,6 @@ jobs:
         run: composer require laravel/framework ^9.0 --no-interaction
       - name: Run Tests
         run: vendor/bin/phpunit --coverage-text --coverage-xml=coverage.xml --log-junit=junit.xml
-#      - name: Install Mutation Testing Package
-#        run: composer config --no-plugins allow-plugins.infection/extension-installer true && composer require --dev infection/infection
       - name: Full Mutation Testing
         if: github.event_name == 'push'
         run: infection -j$(nproc) --coverage=. --min-msi=70 --min-covered-msi=70 --only-covered --ignore-msi-with-no-mutations --logger-github
@@ -86,8 +84,10 @@ jobs:
 
       - name: Output Logs
         run: |
-          cat summary.log || echo "No summary" >> $GITHUB_STEP_SUMMARY
-          cat per-mutator.md || echo "No mutations" >> $GITHUB_STEP_SUMMARY
+          [ -f summary.log ] && cat per-mutator.md >> $GITHUB_STEP_SUMMARY
+          [ -f per-mutator.md ] && cat summary.log >> $GITHUB_STEP_SUMMARY
+          #cat summary.log || echo "No summary" >> $GITHUB_STEP_SUMMARY
+          #cat per-mutator.md || echo "No mutations" >> $GITHUB_STEP_SUMMARY
 
   linting:
     name: Linting
@@ -99,7 +99,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          tools: php-cs-fixer
+          tools: none, php-cs-fixer
           coverage: none
       - name: Run Lint Check
         run: php-cs-fixer fix --dry-run -vv --diff --config=.php_cs.dist.php
