--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,13 @@ jobs:
       - name: Output Logs
         run: |
           [ -f summary.log ] && cat summary.log || echo "No summary is available" >> $GITHUB_STEP_SUMMARY
-          [ -f per-mutator.md ] && cat per-mutator.md || echo "No mutator effectiveness table is available" >> $GITHUB_STEP_SUMMARY          
+          [ -f per-mutator.md ] && cat per-mutator.md || echo "No mutator effectiveness table is available" >> $GITHUB_STEP_SUMMARY
+
+      - name: HTML Report As Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: mutation-explorer
+          path: infection.html
 
   linting:
     name: Linting
