--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 	"require-dev": {
 		"phpunit/phpunit": "^9",
 		"orchestra/testbench": "^6",
-		"mockery/mockery": "^1"
+		"mockery/mockery": "^1",
+		"friendsofphp/php-cs-fixer": "3.4.*"
 	},
 	"authors": [
 		{
