--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9",
-		"orchestra/testbench": "^6|^7.13",
-		"mockery/mockery": "^1"
+		"orchestra/testbench": "^6",
+		"mockery/mockery": "^1",
+		"friendsofphp/php-cs-fixer": "3.4.*"
 	},
 	"authors": [
 		{
