--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9",
-		"orchestra/testbench": "^6",
+		"orchestra/testbench": "^6|^7",
 		"mockery/mockery": "^1",
 		"friendsofphp/php-cs-fixer": "3.4.*"
 	},
