--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
             php-version: '7.4'
           - laravel-version: '^10.0'
             php-version: '7.4'
+          - laravel-version: '^10.0'
+            php-version: '8.0'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
